# TIPE

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tempCodeRunnerFile.python
src/: road.cpp  road.h  solver.cpp  solver.h  spline.cpp  spline.h  traj.cpp  traj.h
